Finalização das rotas principais do CRUD de Taxas/Pagamentos
Alteração do nome Tax -> Fee em todas as instâncias.
Testes realizados.
Adição de tipo de Taxa.
